test fix for BagIcon not showing full height

--- a/src/style/Header.scss
+++ b/src/style/Header.scss
@@ -7,13 +7,10 @@
   height: 100px;
   background: white;
   color: #32325d;
+
   // border-bottom: 1px solid lightgray;
   // box-shadow: 0 5px 10px rgba(154, 160, 185, 0.05),
   //   0 15px 40px rgba(166, 173, 201, 0.2);
-}
-
-.Header__actions {
-  position: relative;
 }
 
 .Header__logo {
